compiler-plugin/src/testData/reference/errors/MustBeAnnotated.kt
package reference.errors

<!SYMBOL_EXPORT_REFERENCE_MUST_BE_ANNOTATED!>object MustBeAnnotated<!> : BaseReferenceExporter() {
}

